team opretaion made and tested inside swagger - only the invite is not tested yet! also now the req.user contain the user_id, because the tokenGenerator gonna make the provided token also have the user_id in it beside the username
