# app/swagger.yaml
@@ -29,6 +29,23 @@ components:
         updatedAt:
           type: string
           format: date-time
+    Team:
+      type: object
+      properties:
+        _id:
+          type: string
+        name:
+          type: string
+        description:
+          type: string
+        username:
+          type: string
+        users:
+          type: array
+          items:
+            type: string
+        owner:
+          type: string
 
 paths:
 
@@ -288,6 +305,9 @@ paths:
         404:
           description: Project not found
 
+
+# task routes
+
   /project/{projectId}/tasks/create:
     post:
       tags:
@@ -427,6 +447,208 @@ paths:
                 $ref: '#/components/schemas/Task'
         404:
           description: Task not found
+
+
+# team routes
+
+  /team/create:
+    post:
+      summary: Create a new team
+      operationId: createTeam
+      tags:
+        - Teams
+      requestBody:
+        required: true
+        content:
+          application/json: 
+            schema:
+              type: object
+              required:
+                - name
+                - description
+                - username
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+                username:
+                  type: string
+      responses:
+        201:
+          description: The team was successfully created
+        500:
+          description: Creating the team encountered a problem
+
+
+  /team/list:
+    get:
+      summary: Get a list of all teams
+      operationId: getListOfTeam
+      tags:
+        - Teams
+      responses:
+        200:
+          description: A list of all teams
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/Team'
+
+  /team/me:
+    get:
+      summary: Get the current user's teams
+      operationId: getMyTeams
+      tags:
+        - Teams
+      responses:
+        200:
+          description: A list of the user's teams
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/Team'
+
+  /team/invite/{teamID}/{username}:
+    get:
+      summary: Invite a user to a team
+      operationId: inviteUserToTeam
+      tags:
+        - Teams
+      parameters:
+        - in: path
+          name: teamID
+          type: string
+          required: true
+        - in: path
+          name: username
+          type: string
+          required: true
+      responses:
+        200:
+          description: The request was successfully registered
+        400:
+          description: The user you are trying to invite to the team was not found or has already been invited
+
+  /team/{id}:
+    get:
+      summary: Get a specific team by ID
+      operationId: getTeamById
+      tags:
+        - Teams
+      parameters:
+        - in: path
+          name: id
+          type: string
+          required: true
+      responses:
+        200:
+          description: The requested team
+          schema:
+            $ref: '#/components/schemas/Team'
+        404:
+          description: No team was found
+  /team/remove/{id}:
+    delete:
+      summary: Remove a team by ID
+      operationId: removeTeamById
+      tags:
+        - Teams
+      parameters:
+        - in: path
+          name: id
+          type: string
+          required: true
+      responses:
+        200:
+          description: The team was successfully deleted
+        404:
+          description: No team was found
+        500:
+          description: The team was not deleted. Please try again
+
+  /team/update/{teamID}:
+    put:
+      summary: Update an existing team
+      description: Updates a team with the specified teamID and data in the request body
+      tags:
+        - Teams
+      parameters:
+        - in: path
+          name: teamID
+          schema:
+            type: string
+          required: true
+          description: The ID of the team to update
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: The name of the team
+                description:
+                  type: string
+                  description: A brief description of the team
+                username:
+                  type: string
+                  description: The unique username of the team
+              example:
+                name: New Team Name
+                description: This is a new description for the team
+                username: new_team_username
+      responses:
+        200:
+          description: The team was successfully updated
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  success:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: The update was successful
+        404:
+          description: No team was found with these specifications
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 404
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: No team was found with these specifications
+        500:
+          description: The update of team information was not successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 500
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: The update of team information was not successful
 
 
   
